[project]
name = "ml-in-ms-st25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon>=1.2",
    "flaml[automl]>=2.3.4",
    "google-genai>=1.12.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "wikipedia-api>=0.8.1",
    "wordcloud>=1.9.4",
]
